Fix alignment issues

--- a/src/app/feature/components/best-sellers/best-sellers.component.less
+++ b/src/app/feature/components/best-sellers/best-sellers.component.less
@@ -21,7 +21,7 @@
 
 .product_detail {
   text-align: left;
-  margin-top: 3%;
+  margin-top: auto;
 }
 
 .product {
